2015-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (UnpackWPG2Raster): Fix Coverity 10312
	"Uninitialized scalar variable" gripe.

	* magick/utility.c (ListFiles): Possibly address
	Coverity 10245 "Sizeof not portable" gripe.

	* magick/widget.c (MagickXFontBrowserWidget): Possibly address
	Coverity 10323 "Sizeof not portable" gripe.

	* coders/mat.c (WriteMATLABImage): FormatString() requires a
	buffer of MaxTextExtent bytes.  Use sprintf instead.  Fix for
	Coverity issue 10170.

	* Magick++/lib/Geometry.cpp (string): FormatString() requires a
	buffer of MaxTextExtent bytes. Fix for Coverity issue 44737.

	* coders/wmf.c (draw_pattern_push): FormatString() requires a
	buffer of MaxTextExtent bytes.  Fix for Coverity issue 44741.
	(ipa_device_begin): FormatString() requires a buffer of
	MaxTextExtent bytes.  Fix for Coverity issue 44740.
	(util_set_brush): FormatString() requires a buffer of
	MaxTextExtent bytes. Fix for Coverity issue 44739.
	(ipa_region_clip): FormatString() requires a buffer of
	MaxTextExtent bytes. Fix for Coverity issue 44738.

2015-03-15  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WritePNGImage) Avoid a null pointer dereference
	while logging inherited color_type (Fixes Coverity CID 10185).


2015-03-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Fix problems with reading
	filenames that include a colon.  Resolves SourceForge bug #294
	"display and convert (probably other things too) choke on
	filenames with colons in".

	* magick/utility.c (GetPathComponent): Fix SubImagePath
	extraction. Fixes SourceForge bug #66 "converting runs slowly when
	subimage is specified".

2015-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc (-geometry): Document the significance of 'x'
	as used in a geometry specification.  In particular, document that
	if width is specified without a trailing 'x' that height is set to