@@ -38,6 +38,9 @@
 <p>2015-03-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/mpeg.c (WriteMPEGParameterFiles): Fix Coverity 10190
+&quot;Resource leak&quot;.  File descriptor was leaked under certain error
+conditions.</li>
 <li>coders/wpg.c (UnpackWPG2Raster): Fix Coverity 10312
 &quot;Uninitialized scalar variable&quot; gripe.</li>
 <li>magick/utility.c (ListFiles): Possibly address
